--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,10 +5,10 @@
 /* ============================================================
     GENERAL STYLES
 ============================================================ */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,900);
-@import url(http://fonts.googleapis.com/css?family=Raleway:500,700,800,900,400,300);
-@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,700italic,400,700);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,900);
+@import url(https://fonts.googleapis.com/css?family=Raleway:500,700,800,900,400,300);
+@import url(https://fonts.googleapis.com/css?family=Vollkorn:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
 .padbot-50{
 	padding-bottom: 50px !important;
 }
